// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`placeholder The example accordion markup string at index 0 matches the corresponding api data schema 1`] = `
Object {
  "childUris": Array [
    "test-fragment-uri",
    "test-fragment-uri",
    "test-fragment-uri",
  ],
  "contentType": "Accordion",
  "contents": "",
  "data": Object {},
  "dependencyUris": Array [],
  "digest": "4d8ba2b09a0224d8f7c939b743d18c47",
  "displayConditions": Array [],
  "documentUri": "mock-document-uri",
  "isRequired": false,
  "isStateful": false,
  "uri": "test-fragment-uri",
}
`;

exports[`placeholder The example badge markup string at index 0 matches the corresponding api data schema 1`] = `
Object {
  "childUris": Array [],
  "contentType": "Badge",
  "contents": "",
  "data": Object {
    "description": "Viewed the example badge in the component catalog.",
    "icon": "https://api.iconify.design/mdi/badge-outline.svg",
    "title": "Example badge",
  },
  "dependencyUris": Array [],
  "digest": "0e05c2757467bbf0b18a620da479c35a",
  "displayConditions": Array [],
  "documentUri": "mock-document-uri",
  "isRequired": false,
  "isStateful": true,
  "uri": "test-fragment-uri",
}
`;

exports[`placeholder The example breakout markup string at index 0 matches the corresponding api data schema 1`] = `
Object {
  "childUris": Array [
    "test-fragment-uri",
  ],
  "contentType": "Breakout",
  "contents": "",
  "data": Object {
    "color": undefined,
    "iconSize": "small",
    "title": "Tip",
  },
  "dependencyUris": Array [],
  "digest": "7f34855b379b45262bd31e051a95daad",
  "displayConditions": Array [],
  "documentUri": "mock-document-uri",
  "isRequired": false,
  "isStateful": false,
  "uri": "test-fragment-uri",
}
`;

exports[`placeholder The example breakout markup string at index 1 matches the corresponding api data schema 1`] = `
Object {
  "childUris": Array [
    "test-fragment-uri",
  ],
  "contentType": "Breakout",
  "contents": "",
  "data": Object {
    "color": undefined,
    "icon": "https://api.iconify.design/mdi/lightbulb-on-10.svg",
    "iconSize": "small",
    "title": "Tip",
  },
  "dependencyUris": Array [],
  "digest": "f59a0ce29118490d1a647ed5fc41b8be",
  "displayConditions": Array [],
  "documentUri": "mock-document-uri",
  "isRequired": false,
  "isStateful": false,
  "uri": "test-fragment-uri",
}
`;

exports[`placeholder The example breakout markup string at index 2 matches the corresponding api data schema 1`] = `
Object {
  "childUris": Array [
    "test-fragment-uri",
  ],
  "contentType": "Breakout",
  "contents": "",
  "data": Object {
    "color": "#7694e4",
    "icon": "http://localhost:8080/topic-assets/mock-topic-uri/images/cat.svg",
    "iconSize": "large",
    "title": "Advice from a cat",
  },
  "dependencyUris": Array [],
  "digest": "6498146ca25634fdc5c2f01e7ba935d5",
  "displayConditions": Array [],
  "documentUri": "mock-document-uri",
  "isRequired": false,
  "isStateful": false,
  "uri": "test-fragment-uri",
}
`;

exports[`placeholder The example checklist markup string at index 0 matches the corresponding api data schema 1`] = `
Object {
  "childUris": Array [
    "test-fragment-uri",
    "test-fragment-uri",
    "test-fragment-uri",
  ],
  "contentType": "Checklist",
  "contents": "",
  "data": Object {
    "completionContent": "You're finished! Nice work.",
  },
  "dependencyUris": Array [],
  "digest": "4d68062cfc6ff55be519e7924be24858",
  "displayConditions": Array [],
  "documentUri": "mock-document-uri",
  "isRequired": true,
  "isStateful": true,
  "uri": "test-fragment-uri",
}
`;

exports[`placeholder The example code-block markup string at index 0 matches the corresponding api data schema 1`] = `
Object {
  "childUris": Array [],
  "contentType": "CodeBlock",
  "contents": "class Dog {
  constructor(name) {
    this.name = name
  }

  speak() {
    console.log(&quot;Woof!&quot;)
  }
}

const fido = new Dog(&apos;fido&apos;)
fido.speak()",
  "data": Object {
    "language": "javascript",
  },
  "dependencyUris": Array [],
  "digest": "a193478a31ab0f625f1a030168f8d5bc",
  "displayConditions": Array [],
  "documentUri": "mock-document-uri",
  "isRequired": false,
  "isStateful": false,
  "uri": "test-fragment-uri",
}
`;
